@@ -51,3 +51,13 @@ If you have an **IDE** installed, follow these steps instead:
 
 Below this are steps onto how you can import the  JavaFX Library that you have downloaded previously. <br>
 
+<h2> IntelliJ </h2>
+- File >> Project Structure >> Libraries under project settings >> + icon  >> Java <Br>
+Altenatively you can access the Project Structure by pressing <strong>CTRL+ALT+SHIFT+S</strong>. <br>
+Following this you should have reached a dialog box with file chooser. You are now going to navigate to your JavaFX library folder. Choose the necessary modules required to run this application which should include <Strong>Time-Blocks</strong>, and then click OK which should close the dialog box. <br>
+
+If you are using a version of Java thats 11 or higher, you need to add JavaFX to your VM. To do this, you will need to go to Edit Configurations which is at Run, and then select application which leads to Main, where you will see a VM options box where you will type --module-path "<strong>Path_File</strong>" --add-modules javafx.controls, javafx.fxml and then apply and close the dialog box. <br>
+Do take note that Path_File is to be replaced with the path of your library for JavaFX. <br>
+<h2> Eclipse </h2>
+
+
